too large of a commit, but I am rushing a bit! Fixed leaderboard to work with new data structure, updated test, shows current logged in user, edit view is working (still needs a couple of styling changes) and I think thats it

--- a/www/scss/leaderboard.scss
+++ b/www/scss/leaderboard.scss
@@ -93,13 +93,17 @@ $regularLeaderHeight: 75px;
   font-size: $font-size-small;
 }
 
-#LeaderboardContent{
+#LeaderboardContent > .scroll{
 
   @include display-flex();
   @include flex-direction(column);
   min-height: 100%;
 
   #LeaderboardList{
-    @include flex(1);
   }
+}
+
+.currentUser{
+  background-color: $blue;
+  color: white!important;
 }
